--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile "com.google.android.gms:play-services-base:11.0.4"
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+//    compile "com.google.android.gms:play-services-places:11.0.4"
+
 }
+//apply plugin: 'com.google.gms.google-services'
