--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ android {
 
     signingConfigs {
         release {
-            storeFile file(RELEASE_STORE_FILE)
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
+            keyAlias 'releasekeystore'
+            keyPassword 'munchin007'
+            storeFile file('keystore/releasekeystore.jks')
+            storePassword 'munchin007'
         }
     }
 
@@ -37,6 +37,7 @@ android {
             it.buildConfigField 'String', 'DATABASE_NAME', '"weatherDb"'
         }
     }
+
 }
 
 
@@ -48,9 +49,10 @@ def getOpenWeatherApiKey() {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test:runner:0.5', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'org.projectlombok:lombok:1.16.18'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
