--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias 'releasekeystore'
-            keyPassword 'munchin007'
-            storeFile file('keystore/releasekeystore.jks')
-            storePassword 'munchin007'
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
         }
     }
 
